fix: visibility trash button in cards

--- a/src/blocks/cards/__item-delete/_hidden/cards__item-delete_hidden.css
+++ b/src/blocks/cards/__item-delete/_hidden/cards__item-delete_hidden.css
@@ -1,18 +1,3 @@
 .cards__item-delete_hidden {
-    background-image: url(../../../../images/trash.svg);
-    background-color: transparent;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border: none;
-    width: 18px;
-    height: 19px;
-    position: absolute;
-    top: 20px;
-    right: 20px;
     visibility: hidden;
-}
-
-.cards__item-delete:hover {
-    opacity: 0.5;
-    cursor: pointer;
 }
